--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="http://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- SWIPER JS -->
-    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <link rel="stylesheet" href="./css/style.css">
 
@@ -33,8 +33,8 @@
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <button id="open-menu-btn"><i class="fa-solid fa-graduation-cap"></i></button>
-            <button id="close-menu-btn"><i class="fa-brands fa-google-scholar"></i></button>
+            <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
+            <button id="close-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
         </div>
     </nav>
     <!-- END OF NAVBAR -->
@@ -268,202 +268,70 @@
     </section>
     <!-- END OF FAQ -->
 
-    <section class="container months__container mySwiper">
-        <h2>Events</h2>
-        <div class="swiper-wrapper">
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month1.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>January</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [03]  |Bridge Club ~ |326 Saint Mary's Hall ~ |5:00pm - 9:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [05]  |Health Informatics ~ |Event location goes here.. ~ |10:00am - 11:00am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [09]  |Dissertation Defense: Will Travers ~ |Online/Virtual ~ |9:00am - 11:00am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [23]  |2024 Doomsday Clock Town Hall ~ |Healey Student Center ~ |2:30pm - 3:30pm </p>
-                </div>
-            </article>
+    <section id="event">
+        <div class="container event__container swiper mySwiper">
+            <div class="event__head">
+                <h2 class="event__title">EVENT & ANNOUNCEMENT</h2>
+                <div class="empty event__empty"></div>
+            </div>
+            <p>This section is dedicated to events and announcements on the page.</p>
+            <p>Events in university are essential for building a vibrant community, fostering connections, and promoting intellectual growth.</p>
+            <p></p>
+            <div class="swiper-wrapper">
+                <article class="swiper-slide">
+                   <img src="./image/event1.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month2.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>February</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [01]  |UIS Educational (EdTech) ~ |Online ~ |1:00pm - 2:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [10]  |Responsible AI ~ |This event is entirely virtual ~ |6:00am - 7:30am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [21]  |Disability ERG Monthly Meeting ~ |Zoom ~ |10:00am - 11:00am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [28]  |Music Series ~ |McNeir Hall (New Building) ~ |12:30pm - 1:30pm </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event2.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month3.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>March</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [09]  |Undergraduate  Grades and Reports ~ |Registrar Office ~ |8:00am - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [11]  |End Gender Apertheid ~ |Zoom/Virtual ~ |9:00am - 10:30am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [09]  |Health Info & Data Science Session ~ |Online/Virtual ~ |8:00am - 9:00am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [23]  |Disability ERG Monthly Meeting ~ |Zoom ~ |10:00am - 11:00am </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event3.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month4.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>April</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [02]  |Hora: Portugues Conversation Hour ~ |ICC 450 ~ |3:30pm - 4:30pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [11]  |War and Politics: Weekly Discussion ~ |Politics Living Room ~ |1:00pm - 2:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [09]  |Graduate Research Workshop ~ |ICC 662 ~ |10:30am - 12:30am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [23]  |2024 Story: Laura Barron-Lopez ~ |Politics Living Room ~ |8:00am - 9:00am </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event4.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month5.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>May</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [01]  |Clinical Research Seminar ~ |Online via Zoon ~ |12:30pm - 2:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [14]  |Distinguished Scientist: Shroff, PhD ~ |ICC 204 ~ |4:00pm - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [21]  |IBC45: Intensive Bioethics Course ~ |Healy Hall ~ |9:00am - 6:30pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [23]  |Drivers of Geopolitical Seminar ~ |Zoom ~ |8:00am - 9:00am </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event5.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month6.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>June</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [03]  |IBC45: Intensive Bioethics June 3-5 ~ |Healy Hall ~ |9:00am - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [04]  |IBC45: Intensive Bioethics June 3-5 ~ |Healy Hall ~ |9:00am - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [05]  |IBC45: Intensive Bioethics June 3-5 ~ |Healy Hall ~ |9:00am - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [23]  |Undergraduate Grades and Reports ~ |Registrar Office ~ |8:00am - 5:00pm </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event6.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month7.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>July</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [06]  |ISIM: Mercy Corps Virtual - Climate Change ~ |Online ~ |8:00am - 9:00am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [07]  |Birthday Celebretion: Jethro G, PhD ~ |Georgetown Center ~ |8:00am - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [19]  |Lessons Learned: Drug Policy ~ |Law Center ~ |10:00am - 12:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [30]  |Building A Healthy Culture Workshop ~ |Zoom ~ |11:00am - 12:00pm </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event7.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month8.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>August</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [08]  |Canvas, Part IV: Communication ~ |Memorial Library ~ |11:00am - 12:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [12]  |PhD Dissertation Defense: Yaguang Liu ~ |326 Mary's Hall ~ |9:00am - 1:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [21]  |Doctoral Project Defence: Joycelyne Bataille ~ |Online ~ |9:00am - 10:00am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [29]  |Dissertation Defence: Tianming Wu ~ |Conference Room ~ |1:00pm - 3:00pm </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event8.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month9.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>September</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [01]  |Dissertation Defense: Junyi Zhang |Research Building ~ |8:00am - 9:00am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [04]  |Global Perspective: Neglected Diseases ~ |Online ~ |11:00am - 12:30pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [11]  |ECo Talks: Allen Collins, Zoologist ~ |Arrupe Hall ~ |11:00am - 2:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [23]  |PhD Dissertation: Shabnam Bezhad ~ |414 Mary's Hall ~ |8:00am - 9:00am </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event9.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month10.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>October</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [03]  |IBC45: Intensive Bioethics June 3-5 ~ |Healy Hall ~ |9:00am - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [04]  |IBC45: Intensive Bioethics June 3-5 ~ |Healy Hall ~ |9:00am - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [05]  |IBC45: Intensive Bioethics June 3-5 ~ |Healy Hall ~ |9:00am - 5:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [23]  |Undergraduate Grades and Reports ~ |Registrar Office ~ |8:00am - 5:00pm </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event10.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month11.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>November</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [07]  |Yoga in The Garden ~ |Regent's Hall ~ |10:00am - 11:00am </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [10]  |The Crisis of Autocracy: Moncef Marzouki ~ |Online ~ |12:00pm - 1:30pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [15]  |The Future of Global Business ~ |Auditorium ~ |2:00pm - 7:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [19]  |Navigating the ESG Lecture ~ |McGhee Library ~ |9:00am - 1:00pm </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event11.jpg">
+                </article>
 
-            <article class="month swiper-slide">
-                <div class="avatar">
-                    <img src="./image/month12.jpg" alt="">
-                </div>
-                <div class="month__info">
-                    <h5>December</h5>
-                    <small>Month</small>
-                </div>
-                <div class="month__body">
-                    <p><i class="fa-regular fa-calendar-check"></i>  [09]  |Kalaris Interlligence Conference ~ |Gaston Hall ~ |9:00am - 6:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [11]  |H-15 & Post-Graduation Visa Alternatives ~ |Zoom ~ |11:00am - 12:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [15]  |Medical Debt Event ~ |Hariri Building ~ |12:00pm - 2:00pm </p>
-                    <p><i class="fa-regular fa-calendar-check"></i>  [19]  |Christmas Party ~ |Student Center ~ |9:00am - 4:00pm </p>
-                </div>
-            </article>
+                <article class="swiper-slide">
+                    <img src="./image/event12.jpg">
+                </article>
+
+                <article class="swiper-slide">
+                    <img src="./image/event13.jpg">
+                </article>
+            </div>
+            <div class="swiper-pagination"></div>
         </div>
-        <div class="swiper-pagination"></div>
     </section>
     <!-- END OF MONTH EVENT -->
 
@@ -519,23 +387,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./main.js"></script>
-
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-        slidesPerView: 1,
-        spaceBetween: 30,
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        // when window width is >= 600px
-        breakpoints: {
-            600: {
-                slidesPerView: 2
-            }
-        }
-      });
-    </script>
 
 </body>
 </html>
