--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <button id="open-menu-btn"><i class="fa-solid fa-graduation-cap"></i></button>
-            <button id="close-menu-btn"><i class="fa-brands fa-google-scholar"></i></button>
+            <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
+            <button id="close-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
         </div>
     </nav>
     <!-- END OF NAVBAR -->
@@ -233,6 +233,25 @@
         </div>
     </section>
     <!-- END OF TEACHER -->
+
+    <section id="exhibitions">
+        <div class="container exhibitions__container">
+            <h2 class="exhibitions__title">Facility Exhibitions</h2>
+            <div class="exhibitions__head">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti perferendis voluptatem mollitia, cum iure ducimus eaque unde similique et voluptas praesentium perspiciatis ad asperiores velit ullam earum itaque voluptatibus ipsam!</p>
+            </div>
+            <div class="exhibitions__gallery">
+                <article><img src="./image/ev.jpg"></article>
+                <article><img src="./image/e1.jpg"></article>
+                <article><img src="./image/e2.jpg"></article>
+                <article><img src="./image/eh.jpg"></article>
+                <article><img src="./image/e3.jpg"></article>
+                <article><img src="./image/e4.jpg"></article>
+                <article><img src="./image/e5.jpg"></article>
+            </div>
+        </div>
+    </section>
+    <!-- END OF EXHIBITIONS -->
 
     <footer>
         <div class="container footer__container">
