--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <button id="open-menu-btn"><i class="fa-solid fa-graduation-cap"></i></button>
-            <button id="close-menu-btn"><i class="fa-brands fa-google-scholar"></i></button>
+            <button id="open-menu-btn"><i class="fa-solid fa-bars"></i></button>
+            <button id="close-menu-btn"><i class="fa-solid fa-bars-staggered"></i></button>
         </div>
     </nav>
     <!-- END OF NAVBAR -->
