--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <div class="swiper-pagination"></div>
         </div>
     </section>
-    <!-- END OF MONTH EVENT -->
+    <!-- END OF EVENT -->
 
     <footer>
         <div class="container footer__container">
