--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@
         <div class="container exhibitions__container">
             <h2 class="exhibitions__title">Facility Exhibitions</h2>
             <div class="exhibitions__head">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti perferendis voluptatem mollitia, cum iure ducimus eaque unde similique et voluptas praesentium perspiciatis ad asperiores velit ullam earum itaque voluptatibus ipsam!</p>
+                <p>Here are some of our facilities and rooms available for showcasing or exhibition purposes.</p>
             </div>
             <div class="exhibitions__gallery">
                 <article><img src="./image/ev.jpg"></article>
