--- a/about.html
+++ b/about.html
@@ -86,13 +86,13 @@
                     <img src="./image/t1.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
-                    <h4>Teacher-1</h4>
-                    <p>Subject-1</p>
+                    <h4>Aundrei Galang Magaling</h4>
+                    <p>I.T & System Administrator Instructor</p>
                 </div>
                 <div class="teacher__member-socials">
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/drei_magaling/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/aundrei.magaling" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </article>
 
@@ -101,13 +101,13 @@
                     <img src="./image/t2.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
-                    <h4>Teacher-2</h4>
-                    <p>Subject-2</p>
+                    <h4>Jeff Arnaldo</h4>
+                    <p>Computer Science & Programming Instructor</p>
                 </div>
                 <div class="teacher__member-socials">
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100014765105331" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </article>
 
