--- a/courses.html
+++ b/courses.html
@@ -46,7 +46,7 @@
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN COMPUTER SCIENCE</h4>
                 <p>Graduates of the BSCS program are well-equipped for careers in software development, data analysis, cybersecurity, and other cutting-edge fields, contributing to the advancement of technology and computing.</p>
-                <a href="https://www.facebook.com/photo/?fbid=658496209632046&set=a.443108831170786" class="btn btn-primary">Learn More</a>
+                <a href="https://www.facebook.com/photo/?fbid=658496209632046&set=a.443108831170786" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -57,7 +57,7 @@
                 <div class="course__info">
                     <h4>BACHELOR OF SCIENCE IN ACCOUNTING INFORMATION SYSTEMS</h4>
                     <p>BSAIS graduates are positioned for successful careers in areas like financial analysis, audit, and accounting information system management, with expertise in both accounting and information systems.</p>
-                    <a href="https://www.facebook.com/photo/?fbid=658491379632529&set=a.443108831170786" class="btn btn-primary">Learn More</a>
+                    <a href="https://www.facebook.com/photo/?fbid=658491379632529&set=a.443108831170786" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -68,7 +68,7 @@
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN ENTREPRENEURSHIP</h4>
                 <p>BSEN equips individuals to initiate and grow successful businesses or contribute innovatively to existing enterprises in a rapidly evolving business landscape, blend of theoretical knowledge and hands-on experience.</p>
-                <a href="https://www.facebook.com/photo/?fbid=658503342964666&set=a.443108831170786" class="btn btn-primary">Learn More</a>
+                <a href="https://www.facebook.com/photo/?fbid=658503342964666&set=a.443108831170786" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -79,7 +79,7 @@
                 <div class="course__info">
                 <h4>TECHNICAL-VOCATIONAL-LIVELIHOOD INFORMATION AND COMMUNICATIONS TECHNOLOGY</h4>
                 <p>TVL-ICT not only focuses on theoretical foundations but also emphasizes real-world applications, ensuring that graduates are prepared for the demands of the digital age, deep understanding of ICT tools and technologies.</p>
-                <a href="https://www.onlineshs.com/information-and-communication-technology/" class="btn btn-primary">Learn More</a>
+                <a href="https://www.onlineshs.com/information-and-communication-technology/" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -90,7 +90,7 @@
                 <div class="course__info">
                 <h4>ACCOUNTANCY, BUSINESS, AND MANAGEMENT</h4>
                 <p>ABM course not only prepares individuals for successful careers in accountancy and finance but also cultivates their abilities to navigate the dynamic world of business, blend of theoretical knowledge and practical applications.</p>
-                <a href="https://www.onlineshs.com/abm/" class="btn btn-primary">Learn More</a>
+                <a href="https://www.onlineshs.com/abm/" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -101,7 +101,7 @@
                 <div class="course__info">
                 <h4>GENERAL ACADEMIC STRAND</h4>
                 <p>GAS prepares individuals for diverse fields, laying a solid foundation for higher education and fostering a holistic approach to learning, variety of subjects, including humanities, social sciences, and natural sciences.</p>
-                <a href="https://www.onlineshs.com/gas/" class="btn btn-primary">Learn More</a>
+                <a href="https://www.onlineshs.com/gas/" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
 
@@ -112,7 +112,7 @@
                 <div class="course__info">
                 <h4>ASSOCIATE IN COMPUTER TECHNOLOGY</h4>
                 <p>ACT program are well-prepared to contribute to the ever-growing technology sector, whether in technical support, software development, or IT management roles, through theoretical knowledge and hands-on experience.</p>
-                <a href="https://www.facebook.com/photo/?fbid=658487809632886&set=a.443108831170786" class="btn btn-primary">Learn More</a>
+                <a href="https://www.facebook.com/photo/?fbid=658487809632886&set=a.443108831170786" class="btn btn-primary" target="_blank">Learn More</a>
                 </div>
             </article>
         </div>
