--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="categories__left">
                 <h1>WHY ACLC MALOLOS?</h1>
                 <p>Here are some compelling reasons why you should consider enrolling at ACLC Malolos.</p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="https://www.facebook.com/ACLCMalolosOfficial" class="btn" target="_blank">Learn More</a>
             </div>
 
             <div class="categories__right">
