--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <h2 class="event__title">EVENT & ANNOUNCEMENT</h2>
                 <div class="empty event__empty"></div>
             </div>
-            <p>This section is dedicated to events and announcements on the page.<br>For more information, please visit our FaceBook page.</p>
+            <p>This section is dedicated to events and announcements on the page.<br>For more information, please visit our Facebook page.</p>
             <p>Events in university are essential for building a vibrant community, fostering connections, and promoting intellectual growth.</p>
             <p></p>
             <div class="swiper-wrapper">
