--- a/about.html
+++ b/about.html
@@ -117,13 +117,13 @@
                     <img src="./image/t3.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
-                    <h4>Teacher-3</h4>
-                    <p>Subject-3</p>
+                    <h4>Jan Erik Rañopa</h4>
+                    <p>I.T & Programming Instructor</p>
                 </div>
                 <div class="teacher__member-socials">
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/jerik.ranopa/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/janerik.ranopa" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </article>
 
@@ -132,13 +132,13 @@
                     <img src="./image/t4.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
-                    <h4>Teacher-4</h4>
-                    <p>Subject-4</p>
+                    <h4>John Carlo C. Santiago</h4>
+                    <p>Graphics & Multimedia Instructor</p>
                 </div>
                 <div class="teacher__member-socials">
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/biem1113" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/karbut" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </article>
 
@@ -147,13 +147,13 @@
                     <img src="./image/t5.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
-                    <h4>Teacher-5</h4>
-                    <p>Subject-5</p>
+                    <h4>Jasmine Paras</h4>
+                    <p>Physical Education Instructor</p>
                 </div>
                 <div class="teacher__member-socials">
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/jasmine.paras.73" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </article>
 
@@ -162,13 +162,13 @@
                     <img src="./image/t6.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
-                    <h4>Teacher-6</h4>
-                    <p>Subject-6</p>
+                    <h4>Reynaldo V. Bantigue Jr.</h4>
+                    <p>I.T & Programming Instructor</p>
                 </div>
                 <div class="teacher__member-socials">
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/rey.villadares" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </article>
 
@@ -177,13 +177,13 @@
                     <img src="./image/t7.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
-                    <h4>Teacher-7</h4>
-                    <p>Subject-7</p>
+                    <h4>John Michael Candelaria</h4>
+                    <p>Physical Education Instructor</p>
                 </div>
                 <div class="teacher__member-socials">
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/titserfish" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/johnmichael.candelaria.37" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </article>
 
@@ -192,13 +192,13 @@
                     <img src="./image/t8.jpg" alt="">
                 </div>
                 <div class="teacher__member-info">
-                    <h4>Teacher-8</h4>
-                    <p>Subject-8</p>
+                    <h4>Gloria C. Palisoc</h4>
+                    <p>Business & Marketing Instructor</p>
                 </div>
                 <div class="teacher__member-socials">
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="./404.html"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/gloria.palisoc.33" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
             </article>
 
