--- a/about.html
+++ b/about.html
@@ -47,7 +47,6 @@
             <div class="about__students-right">
                 <h1>Students</h1>
                 <p><i class="fa-solid fa-at"></i> ACLC Malolos, we maintain a highly conducive learning environment with a remarkable teacher-to-student ratio. With 20 dedicated teachers catering to 140 college, and 160 senior high school students, our institution ensures a personalized approach to education.</p>
-                <p>This equates to an impressive ratio of 1:7 teachers-to-college, and 1:8 teacher-to-shs students, highlighting our commitment to providing individualized attention and support to enhance the overall academic experience.</p>
                 <p>We believe that this optimal ratio contributes significantly to the success and development of each student, fostering a dynamic and engaging educational journey at ACLC Malolos.</p>
                 <div class="students__cards">
                     <article class="student__card">
@@ -80,7 +79,7 @@
     <!-- END OF STUDENTS -->
 
     <section class="teacher">
-        <h2>Meet our Teacher</h2>
+        <h2>Meet our Instructor</h2>
         <div class="container teacher__container">
             <article class="teacher__member">
                 <div class="teacher__member-image">
@@ -237,9 +236,9 @@
 
     <section id="exhibitions">
         <div class="container exhibitions__container">
-            <h2 class="exhibitions__title">Facility Exhibitions</h2>
+            <h2 class="exhibitions__title">Facility and Room Gallery</h2>
             <div class="exhibitions__head">
-                <p>Here are some of our facilities and rooms available for showcasing or exhibition purposes.</p>
+                <p>Here are some of our facilities and rooms available for showcasing.<br>For more information, please visit our Facebook page.</p>
             </div>
             <div class="exhibitions__gallery">
                 <article><img src="./image/ev.jpg"></article>
