--- a/courses.html
+++ b/courses.html
@@ -48,7 +48,7 @@
                 <div class="course__info">
                 <h4>BACHELOR OF SCIENCE IN COMPUTER SCIENCE</h4>
                 <p>Graduates of the BSCS program are well-equipped for careers in software development, data analysis, cybersecurity, and other cutting-edge fields, contributing to the advancement of technology and computing.</p>
-                <a href="https://www.facebook.com/photo/?fbid=658496209632046&set=a.443108831170786" class="btn btn-primary" target="_blank">Learn More</a>
+                <a href="./bscs.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
