--- a/alumni.html
+++ b/alumni.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/alumni.css">
 
     <style>
-        body { background-image: url("./image/logo/dark-texture.png"); }
+        body { background-image: url("./image/logo/theme1.jpg"); }
     </style>
 </head>
 <body>
