--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/404.css">
 
     <style>
-        body { background-image: url("./image/logo/bg-texture.png"); }
+        body { background-image: url("./image/logo/theme1.jpg"); }
     </style>
 </head>
 <body>
