--- a/bsias.html
+++ b/bsias.html
@@ -19,8 +19,7 @@
     <link rel="stylesheet" href="./css/bsias.css">
     
     <style>
-        body { background-image: url("./image/logo/dark-texture.png"); }
-        .courses { margin-top: 1rem; }
+        body { background-image: url("./image/logo/theme1.jpg"); }
     </style>
 </head>
 <body>
