--- a/courses.html
+++ b/courses.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/style.css">
     
     <style>
-        body { background-image: url("./image/logo/dark-texture.png"); }
+        body { background-image: url("./image/logo/theme1.jpg"); }
         .courses { margin-top: 1rem; }
     </style>
 </head>
